kubernetes/KC/apps/self-hosted/paperless/ingress.sops.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: paperless
    namespace: self-hosted
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:GCOkSdRtkE/GISW38eKiyGCsIaP2XUzV9EysWE8=,iv:0U9hEn5kHmp4qrZfKCWRzfBwVEQE0+5bOyY7CBXwMgg=,tag:N/mrGICwRQy62ugB4rtEPA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:roGGhowsKVWb,iv:VfBH/LZEj7G2T5cznEgzLa08lT6C1T0e9pJLUM7Z1s4=,tag:kQn/N2TWdt7Xr9VFAuVdvA==,type:str]
              namespace: ENC[AES256_GCM,data:n7HQHCu05MJ9zTc=,iv:szPNFI9Mw74NSq7K6EvEIAOU2HxNZEA53HlQx+EOUBI=,tag:zhT/SFlydBoUVh9hX5HcNQ==,type:str]
              port: ENC[AES256_GCM,data:FIN4vw==,iv:fI5xO+plYdbuHS49J1JygMp+V2V5lgqwT2B0f1QeXuc=,tag:4cOlufSqZ9uxCqSgZVaQ4g==,type:int]
        - match: ENC[AES256_GCM,data:D8ls/Dz3OC1i/p6XEf/SeKFRr8oiblo=,iv:ReHV2o/+P0pA5zo6MiXirYs2RayQoCgw2AOQH8l/Plk=,tag:9316ye1hJre1DKE9ZuldIA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:OqG4KSCdHy/O,iv:+pKSjbB7Iha8BQU39Yp0gI2yfO0c7frlGNnBBfm2cmA=,tag:5UlQIBvPn+ZAaM7GpbTRfA==,type:str]
              namespace: ENC[AES256_GCM,data:3TG4MrqriPT/vLE=,iv:MY32IqafyShvEqBkMxikPiFkwhl86RNs0d8anvgYrNA=,tag:8VffV3VQPzJGjWjdALaLyQ==,type:str]
              port: ENC[AES256_GCM,data:pQsAHA==,iv:xORqv16aVZBszYcWu70VN5y4Yvfm/miYs6f0ocozSdc=,tag:XUuOLVpoC83w9I1+B3c5fQ==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:zfIXNxEYMZ2c/Z0=,iv:QeU7P0CVHsaboNLv7QXzqPaGB7kCHSak7lAzE8S8L7o=,tag:2bZ0XWLsq3UTlCXfTyTW/w==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWbDFwVURsVkdHeEZrR0dW
[...]
            weoV2jtyvJ/yiydxsSp30I+9OF2v7AN8CEpAgRaZGm4dLdI1ir53LQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-05-29T13:47:40Z"
    mac: ENC[AES256_GCM,data:/wjUATjiTGvxaAkcBpSBMqzTOKHDAaG70+8k2uLDLZD4CM0JqwEUcg7Jiy/dYbHOH4hTPQnpg72G4lGQDNed1Xbju0WKqRbjB6EdB/nOoWB+yJgr0yCPxfhxe5Qb/e2b4zacFjI5r/zbbKO3dG9r128yTKUodxtG4+gvO6BxSns=,iv:0NGROA+ArjmTyMfxOtyfnyHZDf3NHPlt3n7u9ltORHU=,tag:YyM+RnNjYMaNhpSCo0R2vg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
